--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -4,6 +4,7 @@
     background-image: url("/public/imagens/fundo.png");
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
 }
 
 .time h3 {
@@ -18,4 +19,10 @@
     justify-content: space-around;
     margin-top: 32px;
     flex-wrap: wrap;
+}
+
+.input-cor {
+    position: absolute;
+    top: 20px;
+    right: 50px;
 }
